Extract build logic into convention plugins